# Rag_project

./: .dockerignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  requirements.txt
components/: load_and_split.py  load_models.py  qdrant_vector.py  rag_agent.py
qdrant_storage/: raft_state.json
